Fix text wrapping issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -198,3 +198,11 @@ code {
     background-size: 30%;
   }
 }
+
+.task-content {
+  .el-status {
+    position: absolute;
+    left: 0;
+    top: -2px;
+  }
+}
